<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_informacion">

    <fragment
        android:id="@+id/navigation_informacion"
        android:name="com.longasjulian.losquesudos.ui.informacion.InformacionFragment"
        android:label="@string/title_informacion"
        tools:layout="@layout/fragment_informacion" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.longasjulian.losquesudos.ui.map.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_tiendas"
        android:name="com.longasjulian.losquesudos.ui.tiendas.TiendasFragment"
        android:label="@string/title_tiendas"
        tools:layout="@layout/fragment_tiendas" />
</navigation>